[gd_scene load_steps=41 format=3 uid="uid://fai4oh7743nc"]

[ext_resource type="Script" uid="uid://ck3t6pbp8tsvq" path="res://src/battle/battle_scene/battle_scene.gd" id="1_s8cm3"]
[ext_resource type="Shader" uid="uid://dgklmsd8yj6cy" path="res://src/util/shader/palette_shift.gdshader" id="2_8bev8"]
[ext_resource type="Texture2D" uid="uid://dbvthdqhc23fp" path="res://asset/place_holder/project_dungeon_palette.png" id="3_dx6ie"]
[ext_resource type="Script" uid="uid://bwxmgxkfikw88" path="res://src/battle/battle_scene/init_enemy.gd" id="4_1a57w"]
[ext_resource type="Script" uid="uid://tnemu3735n1r" path="res://src/battle/battle_scene/combo_list.gd" id="5_medca"]
[ext_resource type="Script" uid="uid://be0vwr4sw3kdf" path="res://src/util/class/CameraPlus2D.gd" id="6_50bt8"]
[ext_resource type="Script" uid="uid://cnhodbq5x7f4l" path="res://src/battle/ui/ui.gd" id="7_635xt"]
[ext_resource type="Texture2D" uid="uid://dc5brwq7v4wrv" path="res://asset/battle/char/port/port-frame.png" id="8_c5rer"]
[ext_resource type="FontFile" uid="uid://b488m1liu66xo" path="res://asset/place_holder/SmolFont.ttf" id="9_lxwrv"]
[ext_resource type="PackedScene" uid="uid://cwdwpxxcklt1c" path="res://src/battle/ui/action_button.tscn" id="10_0w8dp"]
[ext_resource type="Script" uid="uid://dtx4dkvhp65w4" path="res://src/battle/ui/action_button.gd" id="11_3i8f4"]
[ext_resource type="Shader" uid="uid://c8pv4xgovwgd3" path="res://src/battle/ui/action_button.gdshader" id="12_fuw23"]
[ext_resource type="Texture2D" uid="uid://dcx3kmr4ii7er" path="res://asset/battle/ui/swap_up_button.png" id="13_18pm4"]
[ext_resource type="Texture2D" uid="uid://c3sf85q0i3nc2" path="res://asset/battle/ui/swap_down_button.png" id="14_nth8o"]
[ext_resource type="PackedScene" uid="uid://y17u3vtym25o" path="res://src/battle/ui/CustomProgressBar.tscn" id="15_ct6ln"]
[ext_resource type="PackedScene" uid="uid://dm8p72kolv6jr" path="res://src/battle/ui/tooltip.tscn" id="16_heogu"]
[ext_resource type="Script" uid="uid://iue4bf30f85l" path="res://src/battle/ui/control_sorter.gd" id="17_1clde"]
[ext_resource type="Script" uid="uid://jcnhr6j17jio" path="res://src/battle/ui/tooltip.gd" id="18_f7sdb"]
[ext_resource type="Texture2D" uid="uid://bifoui4cjq6a3" path="res://asset/battle/ui/combo_ind/bog_combo.png" id="19_c7lfy"]
[ext_resource type="Shader" uid="uid://snu2d4w8a06f" path="res://src/util/shader/outline_flashing_shader.gdshader" id="20_yy7b0"]
[ext_resource type="Texture2D" uid="uid://dew21ug7ohg6r" path="res://asset/battle/ui/info_panel_9slice.png" id="21_whhgm"]
[ext_resource type="PackedScene" uid="uid://b6jepkox3hkts" path="res://src/battle/player/green/greenplayer.tscn" id="22_qmnbw"]
[ext_resource type="PackedScene" uid="uid://dmfef746xj7hh" path="res://src/battle/player/red/redplayer.tscn" id="23_kybni"]
[ext_resource type="PackedScene" uid="uid://ciugcs0xshn8b" path="res://src/battle/player/blue/blueplayer.tscn" id="24_t0y8i"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ildep"]
shader = ExtResource("2_8bev8")
shader_parameter/palette = ExtResource("3_dx6ie")
shader_parameter/palette_size = 29

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s105h"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_r8s0v"]
resource_local_to_scene = true
shader = ExtResource("12_fuw23")
shader_parameter/bri = 0.5

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gabcj"]
shader = ExtResource("12_fuw23")
shader_parameter/bri = 0.5

[sub_resource type="Animation" id="Animation_1v401"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../CameraPlus2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../upper_anchor:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_evjvq"]
resource_name = "init"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../CameraPlus2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -48)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 93)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../upper_anchor:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -60)]
}

[sub_resource type="Animation" id="Animation_yxysj"]
resource_name = "slide_in"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.25, 1),
"update": 0,
"values": [Vector2(0, 93), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../CameraPlus2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.25, 1),
"update": 0,
"values": [Vector2(0, -48), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../upper_anchor:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.25, 1),
"update": 0,
"values": [Vector2(0, -60), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_kxpl5"]
resource_name = "slide_out"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.307786, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 93)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../CameraPlus2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.307786, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -48)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../upper_anchor:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.307786, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -60)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kxpl5"]
_data = {
&"RESET": SubResource("Animation_1v401"),
&"init": SubResource("Animation_evjvq"),
&"slide_in": SubResource("Animation_yxysj"),
&"slide_out": SubResource("Animation_kxpl5")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8x15n"]
resource_local_to_scene = true
shader = ExtResource("20_yy7b0")
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/active = false
shader_parameter/thick = false
shader_parameter/alpha = 1.0
shader_parameter/flashing_enable = false
shader_parameter/flashing_t_left = 0.0
shader_parameter/flashing_color = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_r8s0v"]
length = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_gabcj"]
resource_name = "black_in"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_hxwcg"]
resource_name = "black_out"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_8x15n"]
resource_name = "init"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r8s0v"]
_data = {
&"RESET": SubResource("Animation_r8s0v"),
&"black_in": SubResource("Animation_gabcj"),
&"black_out": SubResource("Animation_hxwcg"),
&"init": SubResource("Animation_8x15n")
}

[sub_resource type="LabelSettings" id="LabelSettings_2dtis"]
font = ExtResource("9_lxwrv")
font_size = 64

[node name="BattleScene" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_s8cm3")
random_combo_pick = true

[node name="palette_shift" type="CanvasLayer" parent="."]
layer = 10

[node name="ColorRect" type="ColorRect" parent="palette_shift"]
material = SubResource("ShaderMaterial_ildep")
offset_right = 400.0
offset_bottom = 300.0
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="init_enemy" type="Node" parent="."]
script = ExtResource("4_1a57w")
lane0 = ["skeleton", "skeleton"]
lane1 = ["skeleton", "skeleton"]
lane2 = ["skeleton", "skeleton", "skeleton"]

[node name="combo_list" type="Node" parent="."]
script = ExtResource("5_medca")
combo_list = ["BoG", "R1", "G2"]

[node name="CameraPlus2D" type="Camera2D" parent="."]
anchor_mode = 0
script = ExtResource("6_50bt8")
metadata/_custom_type_script = "uid://be0vwr4sw3kdf"

[node name="ui" type="CanvasLayer" parent="."]
script = ExtResource("7_635xt")

[node name="anchor" type="Control" parent="ui"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="ui/anchor"]
layout_mode = 0
offset_top = 211.0
offset_right = 400.0
offset_bottom = 300.0
color = Color(0.298039, 0.227451, 0.2, 1)

[node name="Port" type="Sprite2D" parent="ui/anchor"]
position = Vector2(20, 232)
centered = false

[node name="Port-frame" type="Sprite2D" parent="ui/anchor/Port"]
show_behind_parent = true
position = Vector2(24, 24)
texture = ExtResource("8_c5rer")

[node name="hp_bar" type="ProgressBar" parent="ui/anchor"]
layout_mode = 0
offset_left = 88.0
offset_top = 248.0
offset_right = 184.0
offset_bottom = 260.0
theme_override_fonts/font = ExtResource("9_lxwrv")
theme_override_font_sizes/font_size = 8
show_percentage = false

[node name="endturn_button" parent="ui/anchor" instance=ExtResource("10_0w8dp")]
layout_mode = 0
offset_left = 295.0
offset_top = 256.0
offset_right = 386.0
offset_bottom = 274.0
text = "Endturn"

[node name="swap_up" type="Panel" parent="ui/anchor"]
modulate = Color(0.5, 0.5, 0.5, 1)
self_modulate = Color(0, 0, 0, 0)
custom_minimum_size = Vector2(0, 18)
layout_mode = 0
offset_left = 295.0
offset_top = 216.0
offset_right = 330.0
offset_bottom = 234.0
theme_override_styles/panel = SubResource("StyleBoxFlat_s105h")
script = ExtResource("11_3i8f4")
metadata/_edit_group_ = true

[node name="anchor" type="Node2D" parent="ui/anchor/swap_up"]
modulate = Color(0.5, 0.5, 0.5, 1)
top_level = true
position = Vector2(295, 216)

[node name="PttButton" type="Sprite2D" parent="ui/anchor/swap_up/anchor"]
material = SubResource("ShaderMaterial_r8s0v")
texture = ExtResource("13_18pm4")
centered = false

[node name="RichTextLabel" type="RichTextLabel" parent="ui/anchor/swap_up/anchor"]
offset_right = 91.0
offset_bottom = 16.0
mouse_filter = 2
theme_override_constants/outline_size = 3
theme_override_fonts/normal_font = ExtResource("9_lxwrv")
theme_override_font_sizes/normal_font_size = 8
bbcode_enabled = true
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="swap_down" type="Panel" parent="ui/anchor"]
modulate = Color(0.5, 0.5, 0.5, 1)
self_modulate = Color(0, 0, 0, 0)
custom_minimum_size = Vector2(0, 18)
layout_mode = 0
offset_left = 295.0
offset_top = 236.0
offset_right = 331.0
offset_bottom = 254.0
theme_override_styles/panel = SubResource("StyleBoxFlat_s105h")
script = ExtResource("11_3i8f4")
metadata/_edit_group_ = true

[node name="anchor" type="Node2D" parent="ui/anchor/swap_down"]
modulate = Color(0.5, 0.5, 0.5, 1)
top_level = true
position = Vector2(295, 236)

[node name="PttButton" type="Sprite2D" parent="ui/anchor/swap_down/anchor"]
material = SubResource("ShaderMaterial_gabcj")
texture = ExtResource("14_nth8o")
centered = false

[node name="RichTextLabel" type="RichTextLabel" parent="ui/anchor/swap_down/anchor"]
offset_right = 91.0
offset_bottom = 16.0
mouse_filter = 2
theme_override_constants/outline_size = 3
theme_override_fonts/normal_font = ExtResource("9_lxwrv")
theme_override_font_sizes/normal_font_size = 8
bbcode_enabled = true
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="hp" parent="ui/anchor" instance=ExtResource("15_ct6ln")]
modulate = Color(0.929412, 0.309804, 0.152941, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0025
anchor_top = -0.0133333
anchor_right = 0.0725
anchor_bottom = 0.0166667
offset_left = 86.0
offset_top = 236.0
offset_right = 156.0
offset_bottom = 244.0
value_name = "HP"
slow_bar = true

[node name="res1" parent="ui/anchor" instance=ExtResource("15_ct6ln")]
modulate = Color(0.9375, 0.739632, 0.270996, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0025
anchor_top = -0.0133333
anchor_right = 0.0725
anchor_bottom = 0.0166667
offset_left = 86.0
offset_top = 258.0
offset_right = 156.0
offset_bottom = 261.0
slow_bar = true

[node name="share_info1" parent="ui/anchor" instance=ExtResource("16_heogu")]
layout_mode = 0
offset_left = 181.0
offset_top = 258.0
offset_right = 191.0
offset_bottom = 268.0
tip_text = ""
editor_show_text = false
text_margin = Vector2(8, 8)

[node name="res2" parent="ui/anchor" instance=ExtResource("15_ct6ln")]
modulate = Color(0.554504, 0.592212, 0.617188, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0025
anchor_top = -0.0133333
anchor_right = 0.0725
anchor_bottom = 0.0166667
offset_left = 86.0
offset_top = 273.0
offset_right = 156.0
offset_bottom = 276.0
slow_bar = true

[node name="share_info2" parent="ui/anchor" instance=ExtResource("16_heogu")]
layout_mode = 0
offset_left = 181.0
offset_top = 273.0
offset_right = 191.0
offset_bottom = 283.0
tip_text = ""
editor_show_text = false
text_margin = Vector2(8, 8)

[node name="action_button" type="Control" parent="ui/anchor"]
anchors_preset = 0
offset_left = 194.0
offset_top = 216.0
offset_right = 285.0
offset_bottom = 295.0
mouse_filter = 2
metadata/_edit_group_ = true

[node name="action1" parent="ui/anchor/action_button" instance=ExtResource("10_0w8dp")]
layout_mode = 2
text = "Action"

[node name="action2" parent="ui/anchor/action_button" instance=ExtResource("10_0w8dp")]
layout_mode = 2
offset_top = 20.0
offset_bottom = 38.0
text = "Action"

[node name="action3" parent="ui/anchor/action_button" instance=ExtResource("10_0w8dp")]
layout_mode = 2
offset_top = 40.0
offset_bottom = 58.0
text = "Action"

[node name="action4" parent="ui/anchor/action_button" instance=ExtResource("10_0w8dp")]
layout_mode = 2
offset_top = 60.0
offset_bottom = 78.0
text = "Action"

[node name="AnimationPlayer" type="AnimationPlayer" parent="ui/anchor"]
libraries = {
&"": SubResource("AnimationLibrary_kxpl5")
}
autoplay = "init"

[node name="upper_anchor" type="Control" parent="ui"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="ui/upper_anchor"]
layout_mode = 0
offset_left = 130.0
offset_right = 270.0
offset_bottom = 24.0
color = Color(0.12549, 0.121569, 0.145098, 1)

[node name="action_point_sorter" type="Control" parent="ui/upper_anchor"]
anchors_preset = 0
offset_left = 130.0
offset_right = 270.0
offset_bottom = 24.0
script = ExtResource("17_1clde")

[node name="combo_ind" type="Panel" parent="ui/upper_anchor"]
self_modulate = Color(0, 0, 0, 0)
z_index = 99
layout_mode = 0
offset_left = 189.0
offset_top = 26.0
offset_right = 211.0
offset_bottom = 48.0
mouse_filter = 1
script = ExtResource("18_f7sdb")
tip_text = "Hello"
icon_texture = ExtResource("19_c7lfy")
metadata/_edit_group_ = true

[node name="Icon" type="Sprite2D" parent="ui/upper_anchor/combo_ind"]
material = SubResource("ShaderMaterial_8x15n")
texture = ExtResource("19_c7lfy")
centered = false

[node name="info_pivot" type="Node2D" parent="ui/upper_anchor/combo_ind"]
z_index = 1

[node name="NinePatchRect" type="NinePatchRect" parent="ui/upper_anchor/combo_ind/info_pivot"]
z_index = -1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -11.0
offset_right = 28.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("21_whhgm")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="RichTextLabel" type="RichTextLabel" parent="ui/upper_anchor/combo_ind/info_pivot"]
offset_top = -11.0
offset_right = 28.0
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("9_lxwrv")
theme_override_font_sizes/normal_font_size = 8
bbcode_enabled = true
text = "Hello"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_group_ = true

[node name="fader" type="ColorRect" parent="ui"]
modulate = Color(1, 1, 1, 0)
offset_right = 400.0
offset_bottom = 300.0
mouse_filter = 2
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="ui/fader"]
libraries = {
&"": SubResource("AnimationLibrary_r8s0v")
}
autoplay = "init"

[node name="GreenPlayer" parent="." instance=ExtResource("22_qmnbw")]
position = Vector2(74, 88)
lane = 2

[node name="RedPlayer" parent="." instance=ExtResource("23_kybni")]
position = Vector2(73, 135)
lane = 1

[node name="BluePlayer" parent="." instance=ExtResource("24_t0y8i")]
position = Vector2(71, 182)

[node name="win" type="Label" parent="."]
visible = false
offset_right = 400.0
offset_bottom = 202.0
text = "WIN!"
label_settings = SubResource("LabelSettings_2dtis")
horizontal_alignment = 1
vertical_alignment = 1
